fix: correct Sum aggregation, remove TODO comment, replace placeholder images
Fixed Issues:
1. docs.html - Replaced incorrect QueryBuilder.Sum() with ExecuteScalarAsync
   - Sum() returns IQueryBuilder<T>, not Task<decimal>
   - Only CountAsync is available for aggregations, not SumAsync
   - Updated to use parameterized SQL query for SUM calculation

2. docs.html - Removed leftover TODO comment 'Add similar sections for other components'

3. Replaced all via.placeholder.com images with ui-avatars.com:
   - authnz.html: 1 avatar replaced
   - ui-components.html: 9 avatars replaced (5 in data array, 4 in UI examples)
   - Used name-based avatars with consistent brand colors
   - All avatars now generate from user names with proper sizes

All examples now use 100% working Tuxedo API calls verified against source code.

--- a/authnz.html
+++ b/authnz.html
@@ -598,7 +598,7 @@
                         <div class="bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-700 rounded-lg p-6">
                             <h5 class="font-semibold text-gray-900 dark:text-white mb-4">Example Output:</h5>
                             <div class="flex items-center space-x-3 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
-                                <img src="https://via.placeholder.com/32" alt="User Avatar" class="w-8 h-8 rounded-full">
+                                <img src="https://ui-avatars.com/api/?name=John+Doe&background=6366f1&color=fff&size=32" alt="User Avatar" class="w-8 h-8 rounded-full">
                                 <div>
                                     <div class="font-medium text-gray-900 dark:text-white">John Doe</div>
                                     <div class="text-sm text-gray-600 dark:text-gray-400">john@example.com</div>
