--- a/index.html
+++ b/index.html
@@ -1124,8 +1124,8 @@
                 <div class="lg:col-span-2">
                     <div class="flex items-center mb-6">
                         <!-- <span class="text-3xl font-bold text-primary-400">Noundry</span> -->
-                        <img x-show="!darkMode" src="assets/nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                            <img x-show="darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
+                        <img x-show="darkMode" src="assets/nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
+                            <img x-show="!darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
                     </div>
                     <p class="text-gray-300 mb-6 max-w-md">
                         The modern .NET development platform that accelerates your journey from idea to production with intelligent tools, reusable components, and AI-powered assistance.
