updated form handling

--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
                 <!-- Email Signup Form -->
                 <div class="max-w-xl mx-auto mb-12">
                     <div x-show="!emailSubmitted" x-transition>
-                        <form class="flex flex-col sm:flex-row gap-3" @submit.prevent="emailSubmitted = true">
+                        <form name="waitlist-hero" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="flex flex-col sm:flex-row gap-3" @submit.prevent="fetch('/', {method: 'POST', headers: {'Content-Type': 'application/x-www-form-urlencoded'}, body: new URLSearchParams(new FormData($event.target)).toString()}).then(() => emailSubmitted = true).catch(() => emailSubmitted = true)" netlify>
+                            <input type="hidden" name="form-name" value="waitlist-hero">
+                            <input type="hidden" name="bot-field">
                             <input
                                 type="email"
+                                name="email"
                                 required
                                 placeholder="Enter your email for early access"
                                 class="flex-1 px-6 py-4 rounded-lg border-2 border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-gray-900 dark:text-white placeholder-gray-500 dark:placeholder-gray-400 focus:outline-none focus:border-primary-600 dark:focus:border-primary-400 text-lg">
@@ -783,9 +786,12 @@
             <!-- Email Signup Form -->
             <div class="max-w-xl mx-auto mb-8" x-data="{ submitted: false }">
                 <div x-show="!submitted" x-transition>
-                    <form class="flex flex-col sm:flex-row gap-3" @submit.prevent="submitted = true">
+                    <form name="waitlist-cta" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="flex flex-col sm:flex-row gap-3" @submit.prevent="fetch('/', {method: 'POST', headers: {'Content-Type': 'application/x-www-form-urlencoded'}, body: new URLSearchParams(new FormData($event.target)).toString()}).then(() => submitted = true).catch(() => submitted = true)" netlify>
+                        <input type="hidden" name="form-name" value="waitlist-cta">
+                        <input type="hidden" name="bot-field">
                         <input
                             type="email"
+                            name="email"
                             required
                             placeholder="Your email address"
                             class="flex-1 px-6 py-4 rounded-lg text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-4 focus:ring-white/50 text-lg">
