--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="text-center">
                         <div class="text-4xl font-bold text-primary-600 dark:text-primary-400">8+</div>
                         <div class="text-gray-600 dark:text-gray-400">Core Libraries</div>
-                    </div>
+                    </div>  
                     <div class="text-center">
                         <div class="text-4xl font-bold text-accent-600 dark:text-accent-400">60+</div>
                         <div class="text-gray-600 dark:text-gray-400">UI Components</div>
@@ -136,7 +136,7 @@
             <div class="text-center mb-16">
                 <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 dark:text-white mb-4">Production-Ready Libraries</h2>
                 <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                    Zero-dependency, high-performance .NET libraries designed for modern application development.
+                    Zero-dependency, high-performance .NET libraries designed for modern application development. This isn't your dad's dotnet. 
                 </p>
             </div>
 
