--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
                 </p>
             </div>
             <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-                <p>© 2025 Noundry. All rights reserved. Coming Soon.</p>
+                <p>© 2025 Noundry. All rights reserved. Coming Soon. Be the first to know.</p>
             </div>
         </div>
     </footer>
