--- a/index.html
+++ b/index.html
@@ -1089,12 +1089,26 @@
             <!-- Email Signup + Pricing Poll Form -->
             <div class="max-w-2xl mx-auto mb-8">
                 <div x-show="!pollSubmitted" x-transition>
-                    <form name="pricing-poll" method="POST" class="space-y-4" @submit.prevent="if($event.target.email) { userEmail = $event.target.email.value; emailSubmitted = true; } fetch('/', {method: 'POST', headers: {'Content-Type': 'application/x-www-form-urlencoded'}, body: new URLSearchParams(new FormData($event.target)).toString()}).then(() => { pollSubmitted = true; }).catch(() => { pollSubmitted = true; })" netlify>
+                    <form name="pricing-poll" method="POST" data-netlify="true" class="space-y-4" @submit.prevent="
+                        const formData = new FormData($event.target);
+                        if(formData.get('email') && !emailSubmitted) {
+                            userEmail = formData.get('email');
+                            emailSubmitted = true;
+                        }
+                        fetch('/', {
+                            method: 'POST',
+                            headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+                            body: new URLSearchParams(formData).toString()
+                        }).then(() => {
+                            pollSubmitted = true;
+                        }).catch(() => {
+                            pollSubmitted = true;
+                        })
+                    ">
                         <input type="hidden" name="form-name" value="pricing-poll">
                         <input type="hidden" name="bot-field">
-                        <input type="hidden" name="email" :value="userEmail">
 
-                        <!-- Email Input (only if not submitted yet) -->
+                        <!-- Email Input - Always has name="email" -->
                         <div x-show="!emailSubmitted" x-transition class="flex flex-col sm:flex-row gap-3">
                             <input
                                 type="email"
@@ -1104,6 +1118,9 @@
                                 placeholder="Your email address"
                                 class="flex-1 px-6 py-4 rounded-lg text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-4 focus:ring-white/50 text-lg">
                         </div>
+
+                        <!-- Hidden email field when already submitted -->
+                        <input x-show="emailSubmitted" type="hidden" name="email" :value="userEmail">
 
                         <!-- Email Submitted Message -->
                         <div x-show="emailSubmitted" x-transition class="bg-white/20 backdrop-blur border-2 border-white/50 rounded-lg px-4 py-3">
