--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <!-- Stats -->
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-4xl mx-auto">
                     <div class="text-center">
-                        <div class="text-4xl font-bold text-primary-600 dark:text-primary-400">8+</div>
+                        <div class="text-4xl font-bold text-primary-600 dark:text-primary-400">9+</div>
                         <div class="text-gray-600 dark:text-gray-400">Core Libraries</div>
                     </div>  
                     <div class="text-center">
@@ -787,6 +787,82 @@
                                 <span class="text-gray-700 dark:text-gray-300">Required variable validation</span>
                             </li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sod -->
+            <div class="mb-20">
+                <div class="grid lg:grid-cols-2 gap-12 items-center">
+                    <div class="lg:pl-6">
+                        <div class="flex items-center mb-6">
+                            <div class="w-16 h-16 bg-violet-600 rounded-lg flex items-center justify-center mr-4">
+                                <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-3xl font-bold text-gray-900 dark:text-white">Noundry.Sod</h3>
+                                <p class="text-gray-600 dark:text-gray-400">Schema Validation Library</p>
+                            </div>
+                        </div>
+                        <p class="text-lg text-gray-600 dark:text-gray-300 mb-6">
+                            Zod-inspired schema validation for .NET with fluent API, type-safe validation, and comprehensive error messages. Build complex validation schemas with ease.
+                        </p>
+                        <ul class="space-y-3">
+                            <li class="flex items-start">
+                                <svg class="w-6 h-6 text-violet-600 dark:text-violet-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">Fluent, chainable API</span>
+                            </li>
+                            <li class="flex items-start">
+                                <svg class="w-6 h-6 text-violet-600 dark:text-violet-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">Type-safe validation with IntelliSense</span>
+                            </li>
+                            <li class="flex items-start">
+                                <svg class="w-6 h-6 text-violet-600 dark:text-violet-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">Comprehensive validators (strings, numbers, objects, unions)</span>
+                            </li>
+                            <li class="flex items-start">
+                                <svg class="w-6 h-6 text-violet-600 dark:text-violet-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">Transforms, refinements, and coercion</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lg:pr-6 bg-gray-900 dark:bg-black rounded-xl shadow-2xl border border-gray-700 dark:border-gray-600 overflow-hidden">
+
+                        <div class="flex items-center px-4 py-3 bg-gray-800 dark:bg-gray-900 border-b border-gray-700">
+                            <div class="flex space-x-2">
+                                <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+                                <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+                                <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+                            </div>
+                            <div class="ml-4 text-gray-400 text-xs font-mono">UserValidator.cs</div>
+                        </div>
+                        <div class="p-6 overflow-x-auto">
+                            <pre class="text-sm font-mono"><code><span class="text-purple-400">var</span> <span class="text-gray-200">userSchema</span> <span class="text-gray-200">=</span> <span class="text-blue-400">Sod</span><span class="text-gray-200">.</span><span class="text-green-400">Object</span><span class="text-gray-200">&lt;</span><span class="text-blue-400">User</span><span class="text-gray-200">&gt;()</span>
+    <span class="text-gray-200">.</span><span class="text-green-400">Field</span><span class="text-gray-200">(u</span> <span class="text-purple-400">=></span> <span class="text-gray-200">u.Username,</span>
+        <span class="text-blue-400">Sod</span><span class="text-gray-200">.</span><span class="text-green-400">String</span><span class="text-gray-200">().</span><span class="text-green-400">Min</span><span class="text-gray-200">(</span><span class="text-orange-400">3</span><span class="text-gray-200">).</span><span class="text-green-400">Max</span><span class="text-gray-200">(</span><span class="text-orange-400">20</span><span class="text-gray-200">))</span>
+    <span class="text-gray-200">.</span><span class="text-green-400">Field</span><span class="text-gray-200">(u</span> <span class="text-purple-400">=></span> <span class="text-gray-200">u.Email,</span>
+        <span class="text-blue-400">Sod</span><span class="text-gray-200">.</span><span class="text-green-400">String</span><span class="text-gray-200">().</span><span class="text-green-400">Email</span><span class="text-gray-200">())</span>
+    <span class="text-gray-200">.</span><span class="text-green-400">Field</span><span class="text-gray-200">(u</span> <span class="text-purple-400">=></span> <span class="text-gray-200">u.Age,</span>
+        <span class="text-blue-400">Sod</span><span class="text-gray-200">.</span><span class="text-green-400">Number</span><span class="text-gray-200">().</span><span class="text-green-400">Min</span><span class="text-gray-200">(</span><span class="text-orange-400">18</span><span class="text-gray-200">).</span><span class="text-green-400">Max</span><span class="text-gray-200">(</span><span class="text-orange-400">100</span><span class="text-gray-200">))</span>
+    <span class="text-gray-200">.</span><span class="text-green-400">Field</span><span class="text-gray-200">(u</span> <span class="text-purple-400">=></span> <span class="text-gray-200">u.Website,</span>
+        <span class="text-blue-400">Sod</span><span class="text-gray-200">.</span><span class="text-green-400">String</span><span class="text-gray-200">().</span><span class="text-green-400">Url</span><span class="text-gray-200">().</span><span class="text-green-400">Optional</span><span class="text-gray-200">());</span>
+
+<span class="text-gray-500">// Validate data</span>
+<span class="text-purple-400">var</span> <span class="text-gray-200">result</span> <span class="text-gray-200">=</span> <span class="text-gray-200">userSchema.</span><span class="text-green-400">Parse</span><span class="text-gray-200">(userData);</span>
+<span class="text-purple-400">if</span> <span class="text-gray-200">(result.Success)</span> <span class="text-gray-200">{</span>
+    <span class="text-purple-400">var</span> <span class="text-gray-200">user</span> <span class="text-gray-200">=</span> <span class="text-gray-200">result.Data;</span>
+<span class="text-gray-200">}</span></code></pre>
+                        </div>
                     </div>
                 </div>
             </div>
