--- a/libraries.html
+++ b/libraries.html
@@ -564,6 +564,54 @@
                     </a>
                 </div>
 
+                <!-- Noundry.Sod -->
+                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-violet-100 dark:bg-violet-900 rounded-lg flex items-center justify-center mr-4">
+                            <svg class="w-6 h-6 text-violet-600 dark:text-violet-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Noundry.Sod</h3>
+                    </div>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">Zod-inspired schema validation for .NET with fluent API, type-safe validation, and comprehensive error messages.</p>
+
+                    <div class="mb-6">
+                        <h4 class="font-semibold text-gray-900 dark:text-white mb-3">Features</h4>
+                        <ul class="space-y-2 text-gray-600 dark:text-gray-300">
+                            <li class="flex items-center">
+                                <svg class="w-4 h-4 text-violet-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Fluent, chainable API
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="w-4 h-4 text-violet-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Type-safe with IntelliSense
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="w-4 h-4 text-violet-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Transforms & refinements
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="text-sm font-mono bg-gray-100 dark:bg-gray-800 rounded p-2 mb-4">
+                        dotnet add package Noundry.Sod
+                    </div>
+
+                    <a href="sod.html" class="inline-flex items-center text-violet-600 dark:text-violet-400 font-semibold">
+                        Learn More
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </a>
+                </div>
+
                 <!-- Noundry.Cloud -->
                 <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg">
                     <div class="flex items-center mb-6">
