--- a/home.html
+++ b/home.html
@@ -251,12 +251,17 @@
                             <h4 class="font-semibold text-gray-900 dark:text-white"><a href="dotenvx.html" class="hover:text-primary-600 dark:hover:text-primary-400 transition-colors">Noundry.DotEnvX</a></h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Enhanced .env file support with encryption, validation, and environment-specific configurations.</p>
                         </div>
+                        <div class="border-l-4 border-primary-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="sod.html" class="hover:text-primary-600 dark:hover:text-primary-400 transition-colors">Noundry.Sod</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Zod inspired JSON schema validator for C#</p>
+                        </div>
                     </div>
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet add package Noundry.Assertive<br>
                             dotnet add package Noundry.Guardian<br>                            
-                            dotnet add package Noundry.DotEnvX                            
+                            dotnet add package Noundry.DotEnvX<br>
+                            dotnet add package Noundry.Sod
                         </code>
                     </div>
                 </div>
