--- a/home.html
+++ b/home.html
@@ -1029,7 +1029,7 @@
                 <!-- Team Plan -->
                 <div class="bg-white dark:bg-gray-900 rounded-2xl shadow-xl p-8 border-2 border-primary-500 relative">
                     <div class="absolute -top-4 left-1/2 transform -translate-x-1/2">
-                        <span class="bg-primary-500 text-white px-4 py-2 rounded-full text-sm font-semibold">Most Popular</span>
+                        <span class="bg-primary-500 text-white px-4 py-2 rounded-full text-sm font-semibold">Popular</span>
                     </div>
                     
                     <div class="text-center mb-8">
