--- a/pricing.html
+++ b/pricing.html
@@ -263,7 +263,7 @@
                 <div class="relative bg-gradient-to-br from-primary-50 to-blue-50 dark:from-primary-900/20 dark:to-blue-900/20 rounded-2xl shadow-xl p-8 border-2 border-primary-500 dark:border-primary-400 transform scale-105">
                     <div class="absolute -top-4 left-1/2 transform -translate-x-1/2">
                         <span class="bg-gradient-to-r from-primary-600 to-blue-600 text-white px-4 py-1 rounded-full text-sm font-semibold">
-                            MOST POPULAR
+                            POPULAR
                         </span>
                     </div>
 
