--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         <div class="text-gray-600 dark:text-gray-400">Code Generation</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-4xl font-bold text-cyan-600 dark:text-cyan-400">3+</div>
-                        <div class="text-gray-600 dark:text-gray-400">Cloud Providers</div>
+                        <div class="text-4xl font-bold text-cyan-600 dark:text-cyan-400">4</div>
+                        <div class="text-gray-600 dark:text-gray-400">Cloud Platforms</div>
                     </div>
                 </div>
             </div>
@@ -1097,9 +1097,14 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10"/>
                     </svg>
                 </div>
+                <div class="inline-block mb-4">
+                    <span class="bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-300 px-4 py-2 rounded-full text-sm font-semibold">
+                        ✅ Production Ready
+                    </span>
+                </div>
                 <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 dark:text-white mb-4">Noundry Deploy CLI</h2>
                 <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                    Multi-cloud deployment using .NET Aspire for local dev and Terraform for production infrastructure.
+                    Aspire for local development + deploy API to AWS, Google Cloud, Azure, or containers.
                 </p>
             </div>
 
@@ -1110,8 +1115,8 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
                         </svg>
                     </div>
-                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">Multi-Cloud</h3>
-                    <p class="text-gray-600 dark:text-gray-300">Deploy to Azure, AWS, Google Cloud, or containers with the same commands.</p>
+                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">Multi-Cloud Support</h3>
+                    <p class="text-gray-600 dark:text-gray-300">Deploy to AWS App Runner, GCP Cloud Run, Azure Container Apps, or Docker/Kubernetes with the same commands.</p>
                 </div>
 
                 <div class="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-gray-800 dark:to-blue-900/20 rounded-xl p-8">
@@ -1120,18 +1125,18 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
                         </svg>
                     </div>
-                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">Infrastructure as Code</h3>
-                    <p class="text-gray-600 dark:text-gray-300">Define infrastructure using C# and .NET patterns with Terraform generation.</p>
+                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">Local Development with Aspire</h3>
+                    <p class="text-gray-600 dark:text-gray-300">Automatic PostgreSQL, Redis, MinIO, and MailHog containers for local development. One command to start everything.</p>
                 </div>
 
                 <div class="bg-gradient-to-br from-green-50 to-emerald-50 dark:from-gray-800 dark:to-green-900/20 rounded-xl p-8">
                     <div class="w-16 h-16 bg-green-600 rounded-xl flex items-center justify-center mb-6">
                         <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M5 12a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v4a2 2 0 01-2 2M5 12a2 2 0 00-2 2v4a2 2 0 002 2h14a2 2 0 002-2v-4a2 2 0 00-2-2m-2-4h.01M17 16h.01"/>
                         </svg>
                     </div>
-                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">Zero Downtime</h3>
-                    <p class="text-gray-600 dark:text-gray-300">Blue-green deployments, health checks, and instant rollbacks built-in.</p>
+                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">Managed Cloud Services</h3>
+                    <p class="text-gray-600 dark:text-gray-300">Deploy lightweight API containers with Terraform-managed RDS, ElastiCache, Cloud SQL, and Azure Database services.</p>
                 </div>
             </div>
 
@@ -1139,16 +1144,15 @@
                 <div class="font-mono text-sm space-y-2">
                     <div class="text-gray-400"># Install Noundry Deploy CLI</div>
                     <div class="text-accent-500">$ dotnet tool install -g Noundry.Deploy</div>
-                    <div class="text-gray-400 mt-4"># Initialize your project</div>
-                    <div class="text-accent-500">$ ndc init --provider azure</div>
-                    <div class="text-gray-400 mt-4"># Deploy to production with a single command</div>
-                    <div class="text-accent-500">$ ndc deploy --environment production</div>
-                    <div class="text-gray-400 mt-2">🚀 Deploying to Azure...</div>
-                    <div class="text-blue-400 mt-2">✅ Infrastructure provisioned</div>
-                    <div class="text-blue-400">✅ Application deployed</div>
-                    <div class="text-blue-400">✅ Health checks passed</div>
+                    <div class="text-gray-400 mt-4"># Start local development with Aspire (PostgreSQL, Redis, MinIO, MailHog)</div>
+                    <div class="text-accent-500">$ ndc run</div>
+                    <div class="text-blue-400 mt-2">✅ Starting Aspire orchestration...</div>
+                    <div class="text-gray-400 mt-4"># Deploy to production (API only, managed services in cloud)</div>
+                    <div class="text-accent-500">$ ndc deploy --provider aws</div>
+                    <div class="text-blue-400 mt-2">✅ Provisioning RDS PostgreSQL, ElastiCache Redis, S3...</div>
+                    <div class="text-blue-400">✅ Deploying API to AWS App Runner...</div>
                     <div class="text-green-400 mt-2">🎉 Deployment successful!</div>
-                    <div class="text-gray-300 mt-2">URL: https://your-app.azurewebsites.net</div>
+                    <div class="text-gray-300 mt-2">URL: https://your-api.aws-app-runner.com</div>
                 </div>
             </div>
         </div>
