--- a/status.html
+++ b/status.html
@@ -33,6 +33,30 @@
                     <div><h3 class="font-semibold text-gray-900 dark:text-white">Andy AI API</h3><p class="text-sm text-gray-600 dark:text-gray-400">AI services running</p></div>
                     <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
                 </div>
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-6 flex items-center justify-between">
+                    <div><h3 class="font-semibold text-gray-900 dark:text-white">Engine UI</h3><p class="text-sm text-gray-600 dark:text-gray-400">Deployment platform interface</p></div>
+                    <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
+                </div>
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-6 flex items-center justify-between">
+                    <div><h3 class="font-semibold text-gray-900 dark:text-white">Engine API</h3><p class="text-sm text-gray-600 dark:text-gray-400">Deployment automation services</p></div>
+                    <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
+                </div>
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-6 flex items-center justify-between">
+                    <div><h3 class="font-semibold text-gray-900 dark:text-white">Logably UI</h3><p class="text-sm text-gray-600 dark:text-gray-400">Log management dashboard</p></div>
+                    <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
+                </div>
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-6 flex items-center justify-between">
+                    <div><h3 class="font-semibold text-gray-900 dark:text-white">Logably API</h3><p class="text-sm text-gray-600 dark:text-gray-400">Log ingestion and query services</p></div>
+                    <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
+                </div>
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-6 flex items-center justify-between">
+                    <div><h3 class="font-semibold text-gray-900 dark:text-white">Authnz UI</h3><p class="text-sm text-gray-600 dark:text-gray-400">Authentication management portal</p></div>
+                    <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
+                </div>
+                <div class="bg-white dark:bg-gray-800 rounded-lg p-6 flex items-center justify-between">
+                    <div><h3 class="font-semibold text-gray-900 dark:text-white">Authnz API</h3><p class="text-sm text-gray-600 dark:text-gray-400">OAuth 2.0 authentication services</p></div>
+                    <div class="flex items-center text-green-600"><svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/></svg>Operational</div>
+                </div>
             </div>
             <div class="mt-12 text-center text-gray-600 dark:text-gray-400">
                 <p>Last updated: <span x-text="new Date().toLocaleString()"></span></p>
